--- a/what-is-react-server-components.mdx
+++ b/what-is-react-server-components.mdx
@@ -3,7 +3,7 @@ title: 'What is React Server Components'
 date: '19-08-2023'
 tags: ['next.js', 'react', 'ssg', 'ssr']
 banner: './images/reactServerComponents.webp'
-description: 'React Server Components is one of the most talked subjects in the react/next.js community, so let's see what is the hype about'
+description: "React Server Components is one of the most talked subjects in the react/next.js community, so let's see what is the hype about"
 ---
 
 In late 2020, the React team introduced the "Zero-Bundle-Size React Server Components" concept. Since then, the React developer community has been experimenting with and learning how to apply this forward-looking approach.
