added some content to post no:3

--- a/the-state-of-nextjs-13.mdx
+++ b/the-state-of-nextjs-13.mdx
@@ -6,3 +6,5 @@ banner: './images/next.js-13.png'
 ---
 
 Next.js 13 is one of the most talked about technologies in the web dev space!
+
+Next.js 13 took the web dev world into a storm after entirely changing there 'old way' of doing things.
