--- a/the-state-of-nextjs-13.mdx
+++ b/the-state-of-nextjs-13.mdx
@@ -3,7 +3,7 @@ title: 'The State of Next.js 13'
 date: '26-08-2023'
 tags: ['next.js', 'react']
 banner: './images/next.js-13.png'
-description: "Next.js 13 is in production? Find out the truth here!!"
+description: "Next.js 13 is in production? Find out the truth here."
 ---
 
 Next.js 13 is one of the most talked about technologies in the web dev space!
