--- a/good-practices-in-angular.mdx
+++ b/good-practices-in-angular.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Good Practices in Angular'
+title: 'Good Practices in Angular applications'
 date: '20-08-2023'
 tags: ['angular']
 banner: './images/Angular-logo.png'
